tests/trybuild/stages/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/stages/comma_alone.rs:4:5
  |
4 |     ,
  |     ^ no rules expected this token in macro call
